--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,21 @@
-html,
-body {
-  padding: 0;
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'IBM Plex Mono', monospace;
+  height: 100%;
+  font-size: 1.6rem;
+  font-weight: 500;
+  overflow-x: hidden;
 }
 
 a {
@@ -11,11 +23,30 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+h1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 4.4rem;
+  line-height: 5.7rem;
+  letter-spacing: -0.32px;
 }
 
-@media (prefers-color-scheme: dark) {
+h2 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 3rem;
+  line-height: 3.9rem;
+  letter-spacing: -0.32px;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 2.4rem;
+  line-height: 3.2rem;
+  letter-spacing: -0.32px;
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +54,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
