--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -106,3 +106,35 @@
 .contactMe a:link {
   padding-right: 12px;
 }
+
+@media (max-width: 50em) {
+  .techItems {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  .projectItem {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .projectLinks {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 25em) {
+  .welcome {
+    flex-direction: column-reverse;
+  }
+
+  .contentContainer {
+    align-items: center;
+  }
+}
+
+@media (max-width: 25em) {
+  .tech-items {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
