--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,12 +46,15 @@ h3 {
   letter-spacing: -0.32px;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (max-width: 50em) {
+  h1 {
+    font-size: 3.2rem;
   }
-  body {
-    color: white;
-    background: black;
+}
+
+@media (max-width: 25em) {
+  h1 {
+    font-size: 2.6rem;
+    line-height: 3.6rem;
   }
-} */
+}
