--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -69,3 +69,32 @@
 .borderRadius {
   border-radius: 9999px;
 }
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+@media (max-width: 50em) {
+}
+
+@media (max-width: 40em) {
+}
+
+@media (max-width: 25em) {
+  .about {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .content {
+    align-items: center;
+  }
+
+  .img {
+    height: 200px;
+    width: 200px;
+  }
+}
