--- a/globals.css
+++ b/globals.css
@@ -97,11 +97,15 @@ h3 {
   flex-direction: column;
   font-size: 2rem;
   gap: 2rem;
-  margin-bottom: 26rem;
+  margin-bottom: 16rem;
 }
 
 .contentContainer {
   max-width: 75rem;
+}
+
+.tools {
+  margin-bottom: 16rem;
 }
 
 .techStack {
@@ -109,23 +113,26 @@ h3 {
 }
 
 .techItems {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
   margin-top: 1rem;
   margin-bottom: 6rem;
 }
 
-.techItems span {
+.techItems li {
+  display: inline-block;
   font-size: 16px;
   color: #ffffff;
   background: #333333;
   border-radius: 10rem;
-  padding: 2px 15px;
+  margin-top: 12px;
+  margin-right: 12px;
+  padding: 4px 12px;
   text-align: center;
 }
 
 .projects {
-  margin-bottom: 26rem;
+  margin-bottom: 16rem;
 }
 
 .projects h2 {
@@ -138,7 +145,7 @@ h3 {
   gap: 2rem;
 }
 
-.projectInfo p {
+.projectInfo span {
   font-size: 1.6rem;
 }
 
@@ -154,7 +161,7 @@ h3 {
   margin-bottom: 0;
 }
 
-.small p {
+.small li {
   font-size: 1.2rem;
   /* padding: 1px 10px; */
   line-height: 1.6rem;
@@ -318,11 +325,6 @@ h3 {
   }
 }
 @media (max-width: 50em) {
-  .techItems {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-
   .projectItem {
     flex-direction: column;
     gap: 3rem;
@@ -341,18 +343,6 @@ h3 {
   .contentContainer {
     align-items: center;
   }
-}
-
-@media (max-width: 25em) {
-  .tech-items {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media (max-width: 50em) {
-}
-
-@media (max-width: 40em) {
 }
 
 @media (max-width: 25em) {
