--- a/globals.css
+++ b/globals.css
@@ -174,6 +174,7 @@ h3 {
   align-items: flex-start;
   justify-content: space-between;
   gap: 7rem;
+  margin-bottom: 16rem;
 }
 
 .projectItem {
@@ -204,7 +205,7 @@ h3 {
   margin: 0 auto;
 }
 
-.about {
+.page {
   display: flex;
   gap: 4rem;
 }
@@ -214,6 +215,10 @@ h3 {
   flex-direction: column;
   gap: 2rem;
   font-weight: 400;
+}
+
+.content a {
+  text-decoration: underline;
 }
 
 .heading {
@@ -275,6 +280,24 @@ h3 {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+}
+
+.flexCenter {
+  align-self: center;
+}
+
+.contactContainer {
+  display: flex;
+  flex-direction: column;
+  font-size: 2.4rem;
+  gap: 4.4rem;
+}
+
+.contactLinks {
+  display: flex;
+  font-size: 2.4rem;
+  gap: 4.4rem;
+  margin-bottom: 6rem;
 }
 
 @media (max-width: 50em) {
