favicon bug, img width for inner project pages

--- a/globals.css
+++ b/globals.css
@@ -382,6 +382,11 @@ h3 {
     align-items: center;
   }
 
+  .page img {
+    width: 100%;
+    flex-basis: content;
+  }
+
   .about {
     flex-direction: column;
     text-align: center;
